Change default maven integration to use `exec-maven-plugin` in favor of `maven-antrun-plugin`
The `exec-maven-plugin` uses the fat jar published by Ktlint instead of relying on `maven-antrun-plugin` to pull all dependencies and built it.